--- a/front-proyecto-DAW1/src/components/menu/Menu.css
+++ b/front-proyecto-DAW1/src/components/menu/Menu.css
@@ -3,30 +3,22 @@
     --light: #ffffff;
     --grey:#efefef;    
 }
+a{
+    text-decoration: none !important;
+}
+a:hover{
+    text-decoration: none;
+}
 
-.sidebar {
-    width: 250px;
-    height: 100%;
-    background-color: #333; /* Color de fondo del sidebar */
-    color: #fff; /* Color de texto en el sidebar */
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .sidebar ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .sidebar li {
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .sidebar li:hover {
-    background-color: #555; /* Color de fondo cuando se pasa el mouse */
-    cursor: pointer;
-  }
+.bg-primary{
+}
+.sidebar-container{
+    background-color: var(--primary) !important;
+    min-height: 100vh;
+}
+.sidebar-container .logo{
+    padding: .875rem 1.25rem;
+}
+.sidebar-container .menu{
+    width: 18rem;
+}
